test/good/Tuple.hs
module Tuple where

tuple :: (Integer, Char, String)
tuple = (1, 'a', "abc")
