test/bad/check/Annotation.hs
module Annotation where

mismatch = "abc" :: Int
